# btc-kalshi

./: .env.example  .gitignore  README.md  btc-kalshi.service  deploy.sh  pyproject.toml
btc_kalshi/: main.py
btc_kalshi/alerts/: alert_service.py
btc_kalshi/approval/: approval_manager.py
btc_kalshi/config/: settings.py
btc_kalshi/core/: constants.py  logger.py  state_machine.py
btc_kalshi/dashboard/: app.py
btc_kalshi/db/: event_logger.py  sqlite_manager.py
btc_kalshi/exchange/: contract_filter.py  exchange_protocol.py  fill_simulator.py  kalshi_client.py  paper_adapter.py  universe_manager.py
btc_kalshi/execution/: exit_manager.py  kill_switch.py  order_manager.py  reconciliation.py
btc_kalshi/feeds/: bar_aggregator.py  binance_feed.py  coinbase_feed.py  feed_manager.py
btc_kalshi/reports/: daily_report.py
data/: macro_calendar.json
scripts/: ensure_data_dirs.sh
tests/: conftest.py  test_alert_service.py  test_approval_manager.py  test_bar_aggregator.py  test_breakout.py  test_coinbase_feed.py  test_config_and_logger.py  test_constants.py  test_contract_filter.py  test_daily_report.py  test_dashboard.py  test_event_logger.py  test_exit_manager.py  test_feed_manager.py  test_indicators.py  test_kalshi_client.py  test_orchestrator.py  test_order_manager.py  test_paper_adapter.py  test_position_sizer.py  test_reconciliation.py  test_reprice_logic.py  test_risk_manager.py  test_signal_engine.py  test_sqlite_positions.py  test_sqlite_state.py  test_state_machine.py  test_streak_manager.py  test_trading_window.py  test_universe_manager.py
(+8 files in other folders)
