[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-kalshi"
version = "0.1.0"
description = "Real-time BTC prediction market trading bot for Kalshi."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiosqlite",
    "asyncpg",
    "httpx",
    "aiosmtplib",
    "websockets",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

